crates/ruff_linter/src/rules/flake8_async/snapshots/ruff_linter__rules__flake8_async__tests__ASYNC102_ASYNC102_anyio.py.snap
---
source: crates/ruff_linter/src/rules/flake8_async/mod.rs
snapshot_kind: text
---
ASYNC102_anyio.py:18:9: ASYNC102 shield it!
   |
16 |         ...
17 |     except anyio.get_cancelled_exc_class():
18 |         await foo()  # error: 8, Statement("anyio.get_cancelled_exc_class()", lineno-1)
   |         ^^^^^^^^^^^ ASYNC102
19 |     except:
20 |         await foo()  # safe
   |

ASYNC102_anyio.py:25:9: ASYNC102 shield it!
   |
23 |         ...
24 |     except anyio.get_cancelled_exc_class():
25 |         await foo()  # error: 8, Statement("anyio.get_cancelled_exc_class()", lineno-1)
   |         ^^^^^^^^^^^ ASYNC102
26 |     except BaseException:
27 |         await foo()  # safe
   |

ASYNC102_anyio.py:32:9: ASYNC102 shield it!
   |
30 |         ...
31 |     except get_cancelled_exc_class():
32 |         await foo()  # error: 8, Statement("get_cancelled_exc_class()", lineno-1)
   |         ^^^^^^^^^^^ ASYNC102
33 |     except:
34 |         await foo()  # safe
   |

ASYNC102_anyio.py:39:9: ASYNC102 shield it!
   |
37 |         ...
38 |     except anyio.get_cancelled_exc_class():
39 |         await foo()  # error: 8, Statement("anyio.get_cancelled_exc_class()", lineno-1)
   |         ^^^^^^^^^^^ ASYNC102
40 |     except anyio.get_cancelled_exc_class():
41 |         await foo()
   |

ASYNC102_anyio.py:49:9: ASYNC102 shield it!
   |
47 |         await foo()  # not handled
48 |     except anyio.get_cancelled_exc_class(...):
49 |         await foo()  # not handled
   |         ^^^^^^^^^^^ ASYNC102
50 |     except get_cancelled_exc_class:
51 |         await foo()  # not handled
   |

ASYNC102_anyio.py:64:9: ASYNC102 shield it!
   |
62 |         await foo()  # not an error
63 |     except:
64 |         await foo()  # error: 8, Statement("bare except", lineno-1)
   |         ^^^^^^^^^^^ ASYNC102
   |

ASYNC102_anyio.py:84:9: ASYNC102 shield it!
   |
82 |           # create_task_group does not block/checkpoint on entry, and is not
83 |           # a cancellation point on exit.
84 |           async with anyio.create_task_group() as tg:
   |  _________^
85 | |             tg.cancel_scope.deadline = anyio.current_time() + 10
86 | |             tg.cancel_scope.shield = True
87 | |             await foo()  # noqa: ASYNC102 - fixthis
   | |_______________________^ ASYNC102
   |
