crates/ruff_linter/src/rules/flake8_async/snapshots/ruff_linter__rules__flake8_async__tests__ASYNC102_ASYNC102_old.py.snap
---
source: crates/ruff_linter/src/rules/flake8_async/mod.rs
snapshot_kind: text
---
ASYNC102_old.py:44:13: ASYNC102 shield it!
   |
42 |     except Exception as e:
43 |         with anyio.CancelScope(shield=False):
44 |             await asyncio.sleep(1)  # fail
   |             ^^^^^^^^^^^^^^^^^^^^^^ ASYNC102
45 |         with anyio.CancelScope():
46 |             await asyncio.sleep(1)  # fail
   |

ASYNC102_old.py:46:13: ASYNC102 shield it!
   |
44 |             await asyncio.sleep(1)  # fail
45 |         with anyio.CancelScope():
46 |             await asyncio.sleep(1)  # fail
   |             ^^^^^^^^^^^^^^^^^^^^^^ ASYNC102
47 |         with anyio.move_on_after(shield=False):
48 |             await asyncio.sleep(1)  # fail
   |

ASYNC102_old.py:48:13: ASYNC102 shield it!
   |
46 |             await asyncio.sleep(1)  # fail
47 |         with anyio.move_on_after(shield=False):
48 |             await asyncio.sleep(1)  # fail
   |             ^^^^^^^^^^^^^^^^^^^^^^ ASYNC102
49 |         with anyio.move_on_after():
50 |             await asyncio.sleep(1)  # fail
   |

ASYNC102_old.py:50:13: ASYNC102 shield it!
   |
48 |             await asyncio.sleep(1)  # fail
49 |         with anyio.move_on_after():
50 |             await asyncio.sleep(1)  # fail
   |             ^^^^^^^^^^^^^^^^^^^^^^ ASYNC102
51 |         with anyio.fail_after(shield=False):
52 |             await asyncio.sleep(1)  # fail
   |

ASYNC102_old.py:52:13: ASYNC102 shield it!
   |
50 |             await asyncio.sleep(1)  # fail
51 |         with anyio.fail_after(shield=False):
52 |             await asyncio.sleep(1)  # fail
   |             ^^^^^^^^^^^^^^^^^^^^^^ ASYNC102
53 |         with anyio.fail_after():
54 |             await asyncio.sleep(1)  # fail
   |

ASYNC102_old.py:54:13: ASYNC102 shield it!
   |
52 |             await asyncio.sleep(1)  # fail
53 |         with anyio.fail_after():
54 |             await asyncio.sleep(1)  # fail
   |             ^^^^^^^^^^^^^^^^^^^^^^ ASYNC102
   |

ASYNC102_old.py:68:9: ASYNC102 shield it!
   |
66 |         pass
67 |     except Exception as e:
68 |         await asyncio.sleep(1)  # fail
   |         ^^^^^^^^^^^^^^^^^^^^^^ ASYNC102
   |

ASYNC102_old.py:75:9: ASYNC102 shield it!
   |
73 |         pass
74 |     except asyncio.CancelledError as e:
75 |         await asyncio.sleep(1)  # fail
   |         ^^^^^^^^^^^^^^^^^^^^^^ ASYNC102
   |

ASYNC102_old.py:82:9: ASYNC102 shield it!
   |
80 |         pass
81 |     except ((ZeroDivisionError, Exception), ValueError) as e:
82 |         await asyncio.sleep(1)  # fail
   |         ^^^^^^^^^^^^^^^^^^^^^^ ASYNC102
   |

ASYNC102_old.py:89:9: ASYNC102 shield it!
   |
87 |         pass
88 |     finally:
89 |         await asyncio.sleep(1)  # fail
   |         ^^^^^^^^^^^^^^^^^^^^^^ ASYNC102
90 | 
91 | async def fail_async_with():
   |

ASYNC102_old.py:95:9: ASYNC102 shield it!
   |
93 |           pass
94 |       finally:
95 |           async with my_own_async_manager():  # fail
   |  _________^
96 | |             pass
   | |________________^ ASYNC102
97 |   
98 |   async def pass_variable_for_exception_types(exceptions_to_process: BaseException) -> Iterator[None]:
   |
