crates/ruff_linter/src/rules/flake8_async/snapshots/ruff_linter__rules__flake8_async__tests__ASYNC102_annotations.py_3.14.snap
---
source: crates/ruff_linter/src/rules/flake8_async/mod.rs
---
ASYNC102 Cancellation point in `finally` must be protected by a shielded cancel scope
  --> ASYNC102_annotations.py:12:33
   |
11 |         # Defaults are evaluated regardless of the annotation semantics.
12 |         async def default(value=await factory()):  # ASYNC102
   |                                 ^^^^^^^^^^^^^^^
13 |             await work()
   |
