crates/ruff_linter/src/rules/flake8_async/snapshots/ruff_linter__rules__flake8_async__tests__ASYNC102_future_annotations.py_3.13.snap
---
source: crates/ruff_linter/src/rules/flake8_async/mod.rs
---
ASYNC102 Cancellation point in `finally` must be protected by a shielded cancel scope
  --> ASYNC102_future_annotations.py:13:33
   |
11 |             await work()
12 |
13 |         async def default(value=await factory()):  # ASYNC102
   |                                 ^^^^^^^^^^^^^^^
14 |             await work()
   |
