crates/ruff_linter/src/rules/flake8_async/snapshots/ruff_linter__rules__flake8_async__tests__ASYNC109_ASYNC109.py.snap
---
source: crates/ruff_linter/src/rules/flake8_async/mod.rs
---
ASYNC109.py:8:16: ASYNC109 Prefer `trio.fail_after` and `trio.move_on_after` over manual `async` timeout behavior
  |
8 | async def func(timeout):
  |                ^^^^^^^ ASYNC109
9 |     ...
  |

ASYNC109.py:12:16: ASYNC109 Prefer `trio.fail_after` and `trio.move_on_after` over manual `async` timeout behavior
   |
12 | async def func(timeout=10):
   |                ^^^^^^^^^^ ASYNC109
13 |     ...
   |
