crates/ruff_linter/src/rules/flake8_async/snapshots/ruff_linter__rules__flake8_async__tests__ASYNC109_ASYNC109_0.py.snap
---
source: crates/ruff_linter/src/rules/flake8_async/mod.rs
---
ASYNC109_0.py:8:16: ASYNC109 Prefer using an async timeout context manager such as `trio.fail_after` over reimplementing the functionality
  |
8 | async def func(timeout):
  |                ^^^^^^^ ASYNC109
9 |     ...
  |

ASYNC109_0.py:12:16: ASYNC109 Prefer using an async timeout context manager such as `trio.fail_after` over reimplementing the functionality
   |
12 | async def func(timeout=10):
   |                ^^^^^^^^^^ ASYNC109
13 |     ...
   |
