crates/ruff_linter/src/rules/flake8_async/snapshots/ruff_linter__rules__flake8_async__tests__ASYNC109_ASYNC109_1.py.snap
---
source: crates/ruff_linter/src/rules/flake8_async/mod.rs
---
ASYNC109 Async function definition with a `timeout` parameter
 --> ASYNC109_1.py:5:16
  |
5 | async def func(timeout):
  |                ^^^^^^^
  |
help: Use `asyncio.timeout` instead

ASYNC109 Async function definition with a `timeout` parameter
 --> ASYNC109_1.py:9:16
  |
9 | async def func(timeout=10):
  |                ^^^^^^^^^^
  |
help: Use `asyncio.timeout` instead
